# wasm-zkp-challenge

./: .gitignore  Cargo.toml  README.md
benches/: bench_pippenger_msm.rs  perf.rs
src/: lib.rs  msm.rs  pairing.rs
www/: index.html  index.js
