[package]
name = "wasm-zkp-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
# TODO(victor): Should this be enabled?
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# wasm dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"]}

# crypto dependencies
rand_chacha = { version = "0.3.1", default-features = false }
rand = { version = "0.7.3", features = ["wasm-bindgen"]}
rand_xorshift = { version = "0.2" }

# Note that we override the versions of these modules below.
ark-bls12-381 = { version = "0.3.0" }
ark-std = { version = "0.3.0" }
ark-ff = { version = "0.3.0" }
ark-ec = { version = "0.3.0" } 

[patch.crates-io]
ark-bls12-381 = { path = "../ark/curves/bls12_381"}
ark-ec = { path = "../ark/algebra/ec" }
ark-ff = { path = "../ark/algebra/ff" }
ark-std = { git = "https://github.com/arkworks-rs/std", rev="05b7a19a" }

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] }

[profile.test]
opt-level = 3

[[bench]]
name = "bench_pippenger_msm"
harness = false
