[package]
name = "wasm-zkp-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
# TODO(victor): Should this be enabled?
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
blake3 = { version = "1.3.1" }
bytes = { version = "1.1.0" }
clap = { version = "3.2.8", features = ["derive"] }
thiserror = { version = "1.0.15" }

# wasm dependencies
wasm-bindgen = "0.2"

# crypto dependencies
rand_chacha = { version = "0.3.1", default-features = false }
rand = { version = "0.7.3", features = ["wasm-bindgen"]}
rand_xorshift = { version = "0.2" }

# Note that we override the versions of these modules below.
ark-bls12-381 = { version = "0.3.0" }
ark-std = { version = "0.3.0" }
ark-ff = { version = "0.3.0" }
ark-ec = { version = "0.3.0" } 
ark-serialize = { version = "0.3.0" } 

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size or performance when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.58", features=["console"], optional = true }

[patch.crates-io]
ark-bls12-381 = { path = "../ark/curves/bls12_381"}
ark-ec = { path = "../ark/algebra/ec" }
ark-ff = { path = "../ark/algebra/ff" }
ark-serialize = { path = "../ark/algebra/serialize" } 
ark-std = { git = "https://github.com/arkworks-rs/std", rev="05b7a19a" }

[dev-dependencies]
criterion = { version = "0.3" }
pprof = { version = "0.3", features = ["flamegraph"] }

[features]
# Include a panic hook for printing panic messages to the JS console and web_sys support for adding
# console::log statements.
debug = ["console_error_panic_hook", "web-sys/console"]

# Enable parallel computation in arkworks code. Cannot be used with WASM.
parallel = ["ark-ec/parallel", "ark-ff/parallel"]

[profile.test]
opt-level = 3

[[bench]]
name = "bench_pippenger_msm"
harness = false
